tests/baselines/reference/project/jsFileCompilationDifferentNamesNotSpecified/node/jsFileCompilationDifferentNamesNotSpecified.errors.txt
DifferentNamesNotSpecified/tsconfig.json(2,24): error TS6082: Only 'amd' and 'system' modules are supported alongside --outFile.


==== DifferentNamesNotSpecified/tsconfig.json (1 errors) ====
    {
      "compilerOptions": { "outFile": "test.js" }
                           ~~~~~~~~~
!!! error TS6082: Only 'amd' and 'system' modules are supported alongside --outFile.
    }
    
==== DifferentNamesNotSpecified/a.ts (0 errors) ====
    var test = 10;